--- a/index.html
+++ b/index.html
@@ -3,11 +3,19 @@
     <head>
         <meta charset="UTF-8">
         <title>Matheus de Oliveira Magnago</title>
+        <link rel="stylesheet" href="estilos.css">
+        <style type="text/css">
+        h1 {
+            color: blueviolet;
+        }
+        </style>
     </head>
 
-    <body>
-        <h1>Matheus de Oliveira Magnago</h1>
+    <body style="color: blue;">
+        <h1 style="font-size:xx-large;">Matheus de Oliveira Magnago</h1>
+        <p>Entrega da atividade de <strong>PROGRAMAÇÃO WEB 1.</strong></p>
         <hr>
-        <p>Entrega da atividade de <strong>PROGRAMAÇÃO WEB 1.</strong></p>    
+        <h2>Acrescentando CSS</h2>
+        <p>Atividade acrescentando estilos à página principal. </p>  
     </body>
 </html>
