--- a/index.html
+++ b/index.html
@@ -3,19 +3,28 @@
     <head>
         <meta charset="UTF-8">
         <title>Matheus de Oliveira Magnago</title>
-        <link rel="stylesheet" href="estilos.css"> 
+        <link rel="stylesheet" href="estilos.css">
         <style type="text/css">
         h1 {
-            color: blueviolet;
+            color: rgb(255, 0, 0);
         }
         </style>
     </head>
 
-    <body style="color: blue;">
+    <body style="color:black;">
         <h1 style="font-size:xx-large;">Matheus de Oliveira Magnago</h1>
         <p>Entrega da atividade de <strong>PROGRAMAÇÃO WEB 1.</strong></p>
         <hr>
-        <h2>Acrescentando CSS</h2>
-        <p>Atividade acrescentando estilos à página principal. </p>  
+        <h2 style="color:blue;">Acrescentando CSS</h2>
+        <p>Atividade acrescentando estilos à página principal. </p>
+        <hr>
+        <br>
+        <h2 style="color: blue;">Seções e Parágrafos</h2>
+        <h3 style="color: purple;">Quem sou eu?</h3>
+        <p>Sou Matheus de Oliveira Magnago, aluno do IFES SERRA.</p>
+        <br>
+        <h3 style="color:purple;">Minha Página</h3>
+        <p>Está página se trata de atividades e aprendizagem da matéria <strong>PROGWEB1</strong> aplicada pelo <strong>Francisco Boldt</strong>.</p>
+        <hr>
     </body>
 </html>
