--- a/index.html
+++ b/index.html
@@ -5,26 +5,33 @@
         <title>Matheus de Oliveira Magnago</title>
         <link rel="stylesheet" href="estilos.css">
         <style type="text/css">
+        body {
+            color: black;
+            font-family: Arial, Helvetica, sans-serif;
+        }
         h1 {
             color: rgb(255, 0, 0);
+        }
+        h2 {
+            color: blue;
         }
         </style>
     </head>
 
-    <body style="color:black;">
+    <body>
         <h1 style="font-size:xx-large;">Matheus de Oliveira Magnago</h1>
         <p>Entrega da atividade de <strong>PROGRAMAÇÃO WEB 1.</strong></p>
         <hr>
-        <h2 style="color:blue;">Acrescentando CSS</h2>
+        <h2>Acrescentando CSS</h2>
         <p>Atividade acrescentando estilos à página principal. </p>
         <hr>
-        <br>
-        <h2 style="color: blue;">Seções e Parágrafos</h2>
+        <h2>Seções e Parágrafos</h2>
         <h3 style="color: purple;">Quem sou eu?</h3>
         <p>Sou Matheus de Oliveira Magnago, aluno do IFES SERRA.</p>
         <br>
-        <h3 style="color:purple;">Minha Página</h3>
+        <h3 style="color: purple;">Minha Página</h3>
         <p>Está página se trata de atividades e aprendizagem da matéria <strong>PROGWEB1</strong> aplicada pelo <strong>Francisco Boldt</strong>.</p>
         <hr>
+        <h2>Hierarquia de Seletores</h2>
+        <p style="font-family: 'Times New Roman', Times, serif;">Utilizando a Hierarquia de css nesta página.</p>
     </body>
-</html>
