--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <h2>Links</h2>
         <ul>
             <li><a href="pag02.html" target="self" rel="next">Segunda página</a></li>
-            <li><a href="https:www.youtube.com" target="_blank"> Youtube</a></li>
+            <li><a href="https://www.youtube.com" target="_blank"> Youtube</a></li>
             <li><a href="https://www.youtube.com/channel/UClcegOkJsWbla_9X7odCL9g"> Canal do Prof Francisco Boldt</a></li>
         </ul>
         <hr>                 
